fix news dates on mobile

--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -340,6 +340,9 @@
   #chartContainer {
     height: 400px;
   }
+  .stock-news-date {
+    width: 100%;
+  }
 }
 @media only screen and (max-width: 450px) {
   #global-quote-info {
